--- a/TP3-data-mining.ipynb
+++ b/TP3-data-mining.ipynb
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 103,
    "id": "2c220db2-4bbd-4d09-8d38-3ef5dcc408da",
    "metadata": {},
    "outputs": [
@@ -830,11 +830,11 @@
      "output_type": "stream",
      "text": [
       "For Multiple training,test sets:\n",
-      "- Training error: 0.07999999999999996 ( 8.0 %)\n",
-      "- Training error: 0.06000000000000005 ( 6.0 %)\n",
       "- Training error: 0.14 ( 14.0 %)\n",
+      "- Training error: 0.09999999999999998 ( 10.0 %)\n",
+      "- Training error: 0.4 ( 40.0 %)\n",
+      "- Training error: 0.36 ( 36.0 %)\n",
       "- Training error: 0.42000000000000004 ( 42.0 %)\n",
-      "- Training error: 0.06000000000000005 ( 6.0 %)\n",
       "=> Depending on the training/test set, the retrived error is smaller/bigger compared to the error retrived when the test is done on the same train dataset\n"
      ]
     }
@@ -842,10 +842,15 @@
    "source": [
     "from sklearn import naive_bayes\n",
     "\n",
+    "def training_error(clf,train_data,target):\n",
+    "    ea=1-clf.score(np.array(train_data),np.array(target))\n",
+    "    return ea\n",
+    "    \n",
+    "\n",
     "def test(S, clf):\n",
     "    [dataS1, targetS1, dataS2, targetS2] = split(S)\n",
     "    clf.fit(dataS1,targetS1)\n",
-    "    return 1-clf.score(dataS2, targetS2)\n",
+    "    return training_error(clf,dataS2,targetS2)\n",
     "\n",
     "print('For Multiple training,test sets:')\n",
     "for i in range(5):\n",
@@ -857,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 104,
    "id": "8d382778-7270-48d4-8140-c7166b0bd9f1",
    "metadata": {},
    "outputs": [
@@ -865,12 +870,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t = 10 | moyenne = 0.10200000000000001\n",
-      "t = 50 | moyenne = 0.19880000000000003\n",
-      "t = 100 | moyenne = 0.2003999999999999\n",
-      "t = 200 | moyenne = 0.18779999999999986\n",
-      "t = 500 | moyenne = 0.20200000000000032\n",
-      "t = 1000 | moyenne = 0.2027000000000003\n"
+      "t = 10 | moyenne = 0.22800000000000004\n",
+      "t = 50 | moyenne = 0.23520000000000008\n",
+      "t = 100 | moyenne = 0.18659999999999993\n",
+      "t = 200 | moyenne = 0.18589999999999982\n",
+      "t = 500 | moyenne = 0.20880000000000035\n",
+      "t = 1000 | moyenne = 0.19816\n"
      ]
     }
    ],
@@ -921,11 +926,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "532a434f-5b65-4547-8002-664b1d9df960",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Training error for a training set of size  0.1 :  0.19999999999999996\n",
+      "- Training error for a training set of size  0.25 :  0.02631578947368418\n",
+      "- Training error for a training set of size  0.33 :  0.020000000000000018\n",
+      "- Training error for a training set of size  0.5 :  0.053333333333333344\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "sizes=[0.1,0.25,0.33,0.5]\n",
+    "for test_size in sizes:\n",
+    "  X_train, X_test, y_train, y_test = train_test_split( irisData.data,irisData.target,test_size=test_size)\n",
+    "  nb.fit(X_train,y_train)\n",
+    "  y_pred=nb.predict(X_test)\n",
+    "  print(\"- Training error for a training set of size \", test_size,\": \",training_error(nb,X_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1566bbe8-9169-43f9-a022-dbbe8247e937",
+   "metadata": {},
+   "source": [
+    "#### Error estimation through cross-validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "1eb5d084-1a15-4f91-9dae-3a6a16c4eced",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.96       0.94666667]\n",
+      "[0.96 0.92 0.96]\n",
+      "[1.         0.96666667 0.9        0.9        1.        ]\n",
+      "[1.         1.         0.94736842 0.89473684 0.89473684 0.84210526\n",
+      " 1.         1.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "folds=[2,3,5,8]\n",
+    "for i in folds:\n",
+    "  print(cross_val_score(nb,irisData.data,irisData.target,cv=i))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67184278-7d11-4985-99fd-e8dea7054251",
+   "metadata": {},
+   "source": [
+    "Using a DecisionTreeClassifier:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "052a7196-a308-426a-b03c-03ee9b468189",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training error using the Decision tree classifier 0.020000000000000018\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import tree\n",
+    "X, y = irisData.data, irisData.target\n",
+    "arb = tree.DecisionTreeClassifier()\n",
+    "print('Training error using the Decision tree classifier',test(irisData,arb))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "834de9f4-34d3-432e-a2bc-d044cf2a289c",
+   "metadata": {},
+   "source": [
+    "- The traning error metric is used to reflect the model accuracy\n",
+    "- This could be useful depending on the context, an help determine the best model\n",
+    "- In other use cases, precision or recall could be more important to determine the best model (situations in which the False Positive or False Negative should be minimal)"
+   ]
   }
  ],
  "metadata": {
